--- a/server/package.json
+++ b/server/package.json
@@ -17,14 +17,15 @@
     "@types/colors": "^1.2.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.11",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^8.5.9",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -32,6 +33,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
+    "morgan": "^1.10.0",
     "zod": "^3.19.1"
   }
 }
