--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
+    "server": "nodemon -q dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" \"npm run client\" \"npm run server\"",
     "client": "npm start --prefix client",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
