--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "server",
-  "version": "1.0.0",
+  "name": "seria-a-social-app",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "node server/dist/index.js",
     "server": "nodemon -q dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" \"npm run client\" \"npm run server\"",
     "client": "npm start --prefix client",
