--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "nodemon server/dist/index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q server/dist/index.js\" \"npm run client\" \"npm run server\"", 
+    "heroku-prebuild": "npm install && cd client && npm install && cd ",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
