--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"orgId":"cuVlnwO9OvMzTDr45ex1GsjJ","projectId":"prj_1WA1BsMG9OswVhlGu6gRI83TVdGK"}
+{"projectId":"prj_d4dvddx4PLXf1CaWurjOlZszY8iV","orgId":"cuVlnwO9OvMzTDr45ex1GsjJ"}
