--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,23 @@
 {
   "version": 2,
   "builds": [
-  {
-  "src": "client/package.json",
-  "use": "@vercel/ncc",
-  "config": {
-  "alias": {
-  "react-dom": "preact/compat",
-  "react": "preact/compat"
-  }
-  }
-  },
-  {
-  "src": "server/index.ts",
-  "use": "@vercel/node",
-  "config": {
-  "distDir": "server"
-  }
-  }
+    {
+      "src": "client/package.json",
+      "use": "@vercel/node",
+      "config": {
+        "builder": "react-scripts"
+      }
+    },
+    {
+      "src": "server/**/*",
+      "use": "@vercel/node",
+      "config": {
+        "distDir": "server"
+      }
+    }
   ],
   "routes": [
-  {
-  "handle": "filesystem"
-  },
-  {
-  "src": "/api/(.*)",
-  "dest": "server/api/$1"
-  }
+    { "handle": "filesystem" },
+    { "src": "/api/(.*)", "dest": "server/api/$1" }
   ]
-  }
+}
