--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "start": "node dist/index.js",
     "server": "nodemon dist/index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q server/dist/index.js\" \"npm run client\" \"npm run server\"",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q server/dist/index.js\" \"npm run client\" \"npm run server\""
   },
   "keywords": [],
   "author": "",
